[ALLI-2838] Fixed similar items text overflow

--- a/web/interface/themes/ndl/css/default.css
+++ b/web/interface/themes/ndl/css/default.css
@@ -4911,6 +4911,7 @@ ul.similar {
     padding: 10px;
     margin: 0px;
     text-align:left;
+	word-break:break-word;
 }
 
 ul.similar li {
